# nativelink

./: flake.nix
.github/styles/config/vocabularies/TraceMachina/: accept.txt
deploy/dev/: kustomization.yaml
kubernetes/components/worker/: worker.json5
kubernetes/nativelink/: nativelink-config.json5
kubernetes/workers/resources/siso-chromium/: kustomization.yaml
nativelink-scheduler/src/: platform_property_manager.rs
templates/: README.md
templates/chromium/: .gitignore  README.md  basic_cas.json5  flake.nix  pre-commit-hooks.nix
templates/lre-cc/: .bazelrc  .gitignore  MODULE.bazel  flake.nix  pre-commit-hooks.nix
templates/lre-cc/src/: hello-world.cpp
toolchain-examples/: Dockerfile
tools/: chromium-devshell.nix
web/platform/: .gitignore
web/platform/src/content/docs/docs/rbe/: nix-templates.mdx
web/platform/utils/: md_to_mdx_aot.ts
